refactor: refactor shouldRaiseGameIfIveWonTheFirstRoundAndHaveStrongCards test to use mock